[gd_scene load_steps=12 format=3 uid="uid://b85rvx41mwdq"]

[ext_resource type="Script" uid="uid://6x7s5lcle78c" path="res://entities/handbook/certificate/certificate.gd" id="1_72wvm"]
[ext_resource type="Script" uid="uid://cb7obf3qffyw5" path="res://entities/effects/thief_effect.gd" id="2_mvlh6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_72wvm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mvlh6"]

[sub_resource type="RichTextEffect" id="RichTextEffect_oicax"]
script = ExtResource("2_mvlh6")
metadata/_custom_type_script = "uid://cb7obf3qffyw5"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oicax"]

[sub_resource type="RichTextEffect" id="RichTextEffect_8r704"]
script = ExtResource("2_mvlh6")
metadata/_custom_type_script = "uid://cb7obf3qffyw5"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8r704"]

[sub_resource type="RichTextEffect" id="RichTextEffect_wttuy"]
script = ExtResource("2_mvlh6")
metadata/_custom_type_script = "uid://cb7obf3qffyw5"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wttuy"]

[sub_resource type="RichTextEffect" id="RichTextEffect_37aro"]
script = ExtResource("2_mvlh6")
metadata/_custom_type_script = "uid://cb7obf3qffyw5"

[node name="Certificate" type="PanelContainer"]
custom_minimum_size = Vector2(430, 30)
theme_override_styles/panel = SubResource("StyleBoxEmpty_72wvm")
script = ExtResource("1_72wvm")
metadata/_edit_use_anchors_ = true

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Title" type="PanelContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_mvlh6")

[node name="TitleLabel" type="RichTextLabel" parent="HBox/Title"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.20999998, 0.44699997, 1, 1)
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_oicax")]

[node name="Output" type="PanelContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_oicax")

[node name="OutputLabel" type="RichTextLabel" parent="HBox/Output"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 0.13999999, 1)
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_8r704")]

[node name="Input" type="PanelContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_8r704")

[node name="InputLabel" type="RichTextLabel" parent="HBox/Input"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.32633334, 1, 0.13999999, 1)
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_wttuy")]

[node name="Ignore" type="PanelContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_wttuy")

[node name="IgnoreLabel" type="RichTextLabel" parent="HBox/Ignore"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.13999999, 0.13999999, 1)
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1
custom_effects = [SubResource("RichTextEffect_37aro")]
